<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_full_mode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_volume_mode_string"
            android:layout_marginLeft="14dp"
            android:layout_weight="1" />
        <RadioButton
            android:id="@+id/radio_medium_mode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_volume_mode_string"
            android:layout_marginLeft="14dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/radio_silent_mode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/silent_volume_mode_string"
            android:layout_marginLeft="14dp"
            android:layout_weight="1" />
        </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/yes_string"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/no_string"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>